# NewsMind

./: .env.example  .gitignore  AGENTS_Newminds.md  DEPLOYMENT.md  GETTING_STARTED.md  MASTER_PROMPT_NEWSMIND.md  README.md  docker-compose.yml  pytest.ini
.kiro/specs/newsmind-refactoring-simplification/: .config.kiro  bugfix.md  design.md  tasks.md
ai-service/: Dockerfile  README.md  pyproject.toml
ai-service/app/: __init__.py  main.py  models.py
ai-service/app/core/: __init__.py  config.py
ai-service/app/routers/: __init__.py  health.py  pipeline.py
ai-service/app/scraper/: link_extractor.py
ai-service/app/services/: __init__.py  gemini_service.py
backend/: .dockerignore  .env.example  Dockerfile  README.md  package.json
backend/migrations/: 1751451600000_init-extensions.js  1751451601000_roles-permissions.js  1751451602000_users.js  1751451603000_news-sources.js  1751451604000_articles.js  1751451606000_workflow.js  1751451607000_notifications.js  1751451608000_audit.js  1751451609000_embeddings.js  1751600000000_simplify-for-demo.js
backend/scripts/: migrate.js  seed.js
backend/src/: app.controller.spec.ts  app.controller.ts  app.module.ts  app.service.ts  main.ts
backend/test/: app.e2e-spec.ts
frontend/: AGENTS.md  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/components/articles/: ArticleDetailTabs.tsx
tests/: bug_condition_exploration_test.py  conftest.py  preservation_property_test.py
(+63 files in other folders)
