[project]
name = "ai-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "semantic-router>=0.1.15",
    "pydantic>=2.8.0",
    "fastembed>=0.3.6",
    "beautifulsoup4>=4.12.3",
    "httpx>=0.27.0",
    "trafilatura>=1.12.2",
    "uvicorn[standard]>=0.30.0",
    "google-generativeai>=0.8.0",
    "python-dotenv>=1.2.2",
    "openai>=2.44.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "requests>=2.34.2",
]
